# ChangeLog for media-libs/phat
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/phat/ChangeLog,v 1.2 2004/10/16 10:05:36 hansmi Exp $

  16 Oct 2004; Michael Hanselmann <hansmi@gentoo.org> phat-0.2.3.ebuild:
  Added to ~ppc.

*phat-0.2.3 (16 Oct 2004)

  16 Oct 2004; Chris White <chriswhite@gentoo.org> +metadata.xml,
  +phat-0.2.3.ebuild:
  Intial import to the tree.  Thanks to mikael soderholm 
  <gnarlie@ihku.org> for the intial ebuild.  This closes bug #66879.
