@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/phat
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/phat/ChangeLog,v 1.2 2004/10/16 10:05:36 hansmi Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/phat/ChangeLog,v 1.3 2004/11/21 21:28:31 eradicator Exp $
+
+  21 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org> phat-0.2.3.ebuild:
+  Added to ~amd64 and ~sparc
 
   16 Oct 2004; Michael Hanselmann <hansmi@gentoo.org> phat-0.2.3.ebuild:
   Added to ~ppc.
